server: performance improvements and SqlQuery labels